--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "homepage": "http://AleckOstapenko.github.io/Test-task-front-end-developer-2021-06",
-  "name": "test-task-front-end-developer-2021-06-15",
+  "name": "test-task-front-end-developer-2021-06",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "mini-css-extract-plugin": "^1.6.0",
     "node-sass": "^6.0.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-responsive": "^8.2.0",
